--- a/about.html
+++ b/about.html
@@ -57,9 +57,9 @@
     <!--github linkedin links-->
     <div class="container-fluid">
       <div class="row">
-        <div class="offset-3 col-lg-6 col-sm-12">
+        <div class="col-sm-12 col-md-8 offset-md-2 p-3">
           <h3 class="text-center">About Me</h3>
-          <p class="about-me-text text-justify">
+          <p class="about-me-text text-center">
             I am a student of Full Stack Web Developer course at Code
             Institute in Dublin and at the age of 38 i discovered that i enjoy
             creating stuff;- just anything i can imagine. And in my eyes,
@@ -73,8 +73,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4 offset-4">
-          <p class="thought">
+        <div class="col-sm-12 col-md-6 offset-md-3">
+          <p class="thought text-justify text-center">
             “I haven’t failed. I’ve just found 10,000 ways that won’t work.” –
             Thomas Edison
           </p>
