--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
     <!--github linkedin links-->
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-12 col-md-8 offset-md-2 p-3">
+        <div class="col-sm-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 p-3">
           <h3 class="text-center">About Me</h3>
           <p class="about-me-text text-center">
             I am a student of Full Stack Web Developer course at Code
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12 col-md-6 offset-md-3">
+        <div class="col-sm-12 col-md-6 offset-md-3 col-xl-4 offset-xl-4">
           <p class="thought text-justify text-center">
             “I haven’t failed. I’ve just found 10,000 ways that won’t work.” –
             Thomas Edison
