--- a/about.html
+++ b/about.html
@@ -81,22 +81,19 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4"></div>
-        <div class="col-sm-4 point-div-size">
-          <div class="div">
+        <div class="col text-center">
+          <div>
             <i class="fas fa-arrow-down point-down"></i>
           </div>
         </div>
-        <div class="col-sm-4"></div>
       </div>
     </div>
   </main>
   <!--Main Layout about page-->
   <section>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-4 what-i-use">
+      <div class="row whatiuse-bg-color">
+        <div class="col-md-4 offset-md-4 text-center what-i-use">
           <div>
             <h3>What I use</h3>
             <p>
@@ -105,33 +102,29 @@
             </p>
           </div>
         </div>
-        <div class="col-md-4"></div>
       </div>
       <div class="row my-work">
-        <div class="col-md-6">
+        <div class="col text-center">
           <h3>My Work</h3>
         </div>
-        <div class="col-md-6"></div>
       </div>
       <div class="row site1">
-        <div class="col-md-3">
-          <h4>My Portfolio Website</h4>
-        </div>
-        <div class="col-md-3">
+        <div class="col-md-3 offset-md-3">
           <div>
             <a href="index.html" target="_blank"><img src="assets/img/my-portfolio-site.PNG"
                 alt="My first portfolio site" /></a>
           </div>
         </div>
         <div class="col-md-3 site1p">
+          <h4>My Portfolio Website</h4>
           <p>Languages used:<br />HTML<br />CSS</p>
           <a href="index.html" target="_blank" class="button-live hvr-shutter-out-horizontal">Live</a>
           <a href="https://github.com/Matija0408/First-project-take2" target="_blank"
             class="button-github hvr-shutter-out-horizontal">Github</a>
         </div>
         <div class="col-md-3">
-          <h5 class="project-description">Project description</h5>
-          <p>
+          <h5 class="text-center project-description">Project description</h5>
+          <p class="text-center">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
             porro ut ab voluptate nisi beatae dolorem in. Maxime porro
             voluptas illo fugit, tempore non voluptatibus optio nihil id fuga
@@ -140,41 +133,36 @@
         </div>
       </div>
       <div class="row site1">
-        <div class="col-md-3">
+
+        <div class="col-md-3 offset-md-3 text-right site1p">
           <h4>Creativity</h4>
-        </div>
-        <div class="col-md-3">
-          <div>
-            <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"><img
-                src="assets/img/sparkler.jpg" alt="Hand holding a sparkler" /></a>
-          </div>
-        </div>
-        <div class="col-md-3 site1p">
           <p>Languages used:<br />HTML<br />CSS</p>
-          <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"
-            class="button-live hvr-shutter-out-horizontal">Live</a>
           <a href="https://github.com/Matija0408" target="_blank"
             class="button-github hvr-shutter-out-horizontal">Github</a>
+          <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"
+            class="button-live-reverse hvr-shutter-out-horizontal">Live</a>
         </div>
         <div class="col-md-3">
-          <h5 class="project-description">Project description</h5>
-          <p>
+          <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"><img
+              src="assets/img/sparkler.jpg" alt="Hand holding a sparkler" /></a>
+        </div>
+        <div class="col-md-3">
+          <h5 class="project-description text-center">Project description</h5>
+          <p class="text-center">
             (Fake project)<br />
             Exploration into unlocking human creative potential.
           </p>
         </div>
       </div>
       <div class="row site1">
-        <div class="col-md-3">
-          <h4>Omnifood</h4>
-        </div>
-        <div class="col-md-3">
+        <div class="col-md-3 offset-md-3">
           <div>
             <a href="http://omnifoodproject-com.stackstaging.com/" target="_blank"><img src="assets/img/hero.jpg"
                 alt="Food on a plate" /></a>
           </div>
         </div>
         <div class="col-md-3 site1p">
+          <h4>Omnifood</h4>
           <p>Languages used:<br />HTML<br />CSS</p>
           <a href="http://omnifoodproject-com.stackstaging.com/" target="_blank"
             class="button-live hvr-shutter-out-horizontal">Live</a>
@@ -182,8 +170,8 @@
             class="button-github hvr-shutter-out-horizontal">Github</a>
         </div>
         <div class="col-md-3">
-          <h5 class="project-description">Project description</h5>
-          <p>
+          <h5 class="project-description text-center">Project description</h5>
+          <p class="text-center">
             (Fake project)<br />
             Omnifood, your new premium food delivery service.
           </p>
