--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
 <body>
   <header>
-    <!--Background-->
     <div class="img-bg">
       <div>
         <!--nav boilerplate taken from Bootstrap doc-->
@@ -35,6 +34,25 @@
           </li>
           <!--nav boilerplate taken from Bootstrap doc-->
         </ul>
+      </div>
+      <div class="container main-title-quote">
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-6 text-center">
+            <h1>Matija Sekelj</h1>
+            <h2 class="main-title">Full Stack Web Developer</h2>
+            <p>
+              “The only thing worse than being blind is having sight but no
+              vision.” – Helen Keller
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+  <!--Footer-->
+  <footer class="container-fluid footer-bg-color fixed-bottom">
+    <div class="row">
+      <div class="col">
         <div class="nav justify-content-center link">
           <ul class="nav-link link-position">
             <li class="nav-item link">
@@ -51,25 +69,10 @@
             </li>
           </ul>
         </div>
-
-        <!--nav-->
-      </div>
-
-      <div class="container main-title-quote">
-        <div class="row d-flex justify-content-center">
-          <div class="col-md-6 text-center">
-            <h1>Matija Sekelj</h1>
-            <h2 class="main-title">Full Stack Web Developer</h2>
-            <p>
-              “The only thing worse than being blind is having sight but no
-              vision.” – Helen Keller
-            </p>
-          </div>
-        </div>
       </div>
     </div>
-    <!--Background-->
-  </header>
+  </footer>
+  <!--Footer-->
 </body>
 
 </html>
