--- a/about.html
+++ b/about.html
@@ -14,11 +14,10 @@
 </head>
 
 <body>
-  <!--Main Layout about page-->
   <main class="bg-about">
     <div>
       <!--nav boilerplate taken from Bootstrap doc-->
-      <div>
+      <div class="fixed-top">
         <ul class="nav justify-content-center links">
           <li class="nav-item">
             <a class="nav-link border-h" href="index.html">Home</a>
@@ -35,61 +34,43 @@
           </li>
         </ul>
         <!--nav boilerplate taken from Bootstrap doc-->
-        <!--github linkedin links-->
       </div>
-      <div class="nav justify-content-center link">
-        <ul class="nav-link link-position">
-          <li class="nav-item link">
-            <a href="https://ie.linkedin.com/in/matija-sekelj-98449194" target="_blank">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-              <span class="sr-only">Linkedin</span>
-            </a>
-          </li>
-          <li class="nav-item link">
-            <a href="https://github.com/Matija0408" target="_blank">
-              <i class="fa fa-github git-color" aria-hidden="true"></i>
-              <span class="sr-only">Github</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <!--github linkedin links-->
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 p-3">
-          <h3 class="text-center">About Me</h3>
-          <p class="about-me-text text-center">
-            I am a student of Full Stack Web Developer course at Code
-            Institute in Dublin and at the age of 38 i discovered that i enjoy
-            creating stuff;- just anything i can imagine. And in my eyes,
-            coding is the perfect tool for that. First, i'm learning Web
-            Development, and my thoughts about that are as follows:<br /><br />
+      <!--About Me-->
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 p-3">
+            <h3 class="text-center aboutme-mt">About Me</h3>
+            <p class="about-me-text text-center">
+              I am a student of Full Stack Web Developer course at Code
+              Institute in Dublin and at the age of 38 i discovered that i enjoy
+              creating stuff;- just anything i can imagine. And in my eyes,
+              coding is the perfect tool for that. First, i'm learning Web
+              Development, and my thoughts about that are as follows:<br /><br />
 
-            <span>Every website is created for a specific purpose. My goal is to
-              showcase that purpose with beauty, elegance and perfect
-              presentation of the sites goal.</span>
-          </p>
+              <span>Every website is created for a specific purpose. My goal is to
+                showcase that purpose with beauty, elegance and perfect
+                presentation of the sites goal.</span>
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-          <p class="thought text-justify text-center">
-            “I haven’t failed. I’ve just found 10,000 ways that won’t work.” –
-            Thomas Edison
-          </p>
+        <div class="row">
+          <div class="col-sm-12 col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+            <p class="thought text-justify text-center">
+              “If opportunity doesn’t knock, build a door.”
+              – Milton Berle
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col text-center">
-          <div>
-            <i class="fas fa-arrow-down point-down"></i>
+        <div class="row">
+          <div class="col text-center">
+            <div>
+              <i class="fas fa-arrow-down point-down"></i>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+      <!--About Me-->
   </main>
-  <!--Main Layout about page-->
   <section>
     <div class="container-fluid">
       <div class="row whatiuse-bg-color">
@@ -108,13 +89,14 @@
           <h3>My Work</h3>
         </div>
       </div>
-      <div class="row site1">
+      <div class="row site1 mt-3">
         <div class="col-md-3 offset-md-3">
           <div>
             <a href="index.html" target="_blank"><img src="assets/img/my-portfolio-site.PNG"
                 alt="My first portfolio site" /></a>
           </div>
         </div>
+        <!--My Work Projects-->
         <div class="col-md-3 site1p">
           <h4>My Portfolio Website</h4>
           <p>Languages used:<br />HTML<br />CSS</p>
@@ -125,16 +107,13 @@
         <div class="col-md-3">
           <h5 class="text-center project-description">Project description</h5>
           <p class="text-center">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor
-            porro ut ab voluptate nisi beatae dolorem in. Maxime porro
-            voluptas illo fugit, tempore non voluptatibus optio nihil id fuga
-            laborum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque illo dolor ducimus, sint non rerum natus
+            ipsam sed fuga culpa.
           </p>
         </div>
       </div>
-      <div class="row site1">
-
-        <div class="col-md-3 offset-md-3 text-right site1p">
+      <div class="row site1 creativity-bg">
+        <div class="col-md-3 offset-md-3 text-right site1p ">
           <h4>Creativity</h4>
           <p>Languages used:<br />HTML<br />CSS</p>
           <a href="https://github.com/Matija0408" target="_blank"
@@ -142,7 +121,7 @@
           <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"
             class="button-live-reverse hvr-shutter-out-horizontal">Live</a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 mt-3">
           <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"><img
               src="assets/img/sparkler.jpg" alt="Hand holding a sparkler" /></a>
         </div>
@@ -178,11 +157,31 @@
         </div>
       </div>
     </div>
+    <!--My Work Projects-->
   </section>
-  <!--Main Layout-->
-
   <!--Footer-->
-  <footer></footer>
+  <footer class="container-fluid footer-bg-color">
+    <div class="row">
+      <div class="col">
+        <div class="nav justify-content-center link">
+          <ul class="nav-link link-position">
+            <li class="nav-item link">
+              <a href="https://ie.linkedin.com/in/matija-sekelj-98449194" target="_blank">
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                <span class="sr-only">Linkedin</span>
+              </a>
+            </li>
+            <li class="nav-item link">
+              <a href="https://github.com/Matija0408" target="_blank">
+                <i class="fa fa-github git-color" aria-hidden="true"></i>
+                <span class="sr-only">Github</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!--Footer-->
 </body>
 
