--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <!--Main Layout-->
   <main class="container-fluid contact-main bg-contact">
+    <!--nav boilerplate taken from Bootstrap doc-->
     <div class="row">
       <div class="col">
         <ul class="nav justify-content-center links">
@@ -35,30 +35,55 @@
         </ul>
       </div>
     </div>
-
-    <form class="col">
-      <h2 class="contact-position">CONTACT</h2>
-      <div class="form-input">
-        <input class="form-control" type="text" name="name" id="name" placeholder="Name" required />
+    <!--nav boilerplate taken from Bootstrap doc-->
+    <!--Contact form-->
+    <div class="container-fluid">
+      <div class="row offset-md-1">
+        <form action="#" metod="post" class="col">
+          <h2 class="contact-position">CONTACT</h2>
+          <div class="form-input">
+            <input class="form-control" type="text" name="name" id="name" placeholder="Name" required />
+          </div>
+          <div class="form-input">
+            <input class="form-control" type="email" name="email" id="email" placeholder="Email" required />
+          </div>
+          <div class="form-input">
+            <input class="form-control" type="text" name="phone" id="phonenumber" placeholder="Phone" required />
+          </div>
+          <div class="textarea-contact">
+            <textarea class="form-control" type="text" name="text" id="text" placeholder="Message" required></textarea>
+          </div>
+          <div>
+            <button class="button">Send</button>
+          </div>
+        </form>
+        <!--Contact form-->
       </div>
-      <div class="form-input">
-        <input class="form-control" type="email" name="email" id="email" placeholder="Email" required />
-      </div>
-      <div class="form-input">
-        <input class="form-control" type="text" name="phone" id="phonenumber" placeholder="Phone" required />
-      </div>
-      <div class="textarea-contact">
-        <textarea class="form-control" type="text" name="text" id="text" placeholder="Message" required></textarea>
-      </div>
-      <div>
-        <button class="button">Send</button>
-      </div>
-    </form>
+    </div>
   </main>
-  <!--Main Layout-->
-
   <!--Footer-->
-  <footer></footer>
+  <footer class="container-fluid footer-bg-color fixed-bottom">
+    <div class="row">
+      <div class="col">
+        <div class="nav justify-content-center link">
+          <ul class="nav-link link-position">
+            <li class="nav-item link">
+              <a href="https://ie.linkedin.com/in/matija-sekelj-98449194" target="_blank">
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                <span class="sr-only">Linkedin</span>
+              </a>
+            </li>
+            <li class="nav-item link">
+              <a href="https://github.com/Matija0408" target="_blank">
+                <i class="fa fa-github git-color" aria-hidden="true"></i>
+                <span class="sr-only">Github</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!--Footer-->
 </body>
 
