--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <textarea class="form-control" type="text" name="text" id="text" placeholder="Message" required></textarea>
           </div>
           <div>
-            <button class="btn btn-info button" type="button">Send</button>
+            <button class="btn btn-info button">Send</button>
           </div>
         </form>
         <!--Contact form-->
