--- a/about.html
+++ b/about.html
@@ -89,76 +89,82 @@
           <h3>My Work</h3>
         </div>
       </div>
-      <div class="row site1 mt-3">
-        <div class="col-md-3 offset-md-3">
-          <div>
-            <a href="index.html" target="_blank"><img src="assets/img/my-portfolio-site.PNG"
-                alt="My first portfolio site" /></a>
-          </div>
-        </div>
-        <!--My Work Projects-->
-        <div class="col-md-3 site1p">
-          <h4>My Portfolio Website</h4>
-          <p>Languages used:<br />HTML<br />CSS</p>
-          <a href="index.html" target="_blank" class="button-live hvr-shutter-out-horizontal">Live</a>
-          <a href="https://github.com/Matija0408/First-project-take2" target="_blank"
-            class="button-github hvr-shutter-out-horizontal">Github</a>
-        </div>
-        <div class="col-md-3">
-          <h5 class="text-center project-description">Project description</h5>
-          <p class="text-center">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque illo dolor ducimus, sint non rerum natus
-            ipsam sed fuga culpa.
-          </p>
+  </section>
+  <section class="container-fluid">
+    <div class="row site1">
+      <div class="col-md-3 offset-md-3">
+        <div>
+          <a href="index.html" target="_blank"><img src="assets/img/my-portfolio-site.PNG"
+              alt="My first portfolio site" /></a>
         </div>
       </div>
-      <div class="row site1 creativity-bg">
-        <div class="col-md-3 offset-md-3 text-right site1p ">
-          <h4>Creativity</h4>
-          <p>Languages used:<br />HTML<br />CSS</p>
-          <a href="https://github.com/Matija0408" target="_blank"
-            class="button-github hvr-shutter-out-horizontal">Github</a>
-          <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"
-            class="button-live-reverse hvr-shutter-out-horizontal">Live</a>
-        </div>
-        <div class="col-md-3 mt-3">
-          <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"><img
-              src="assets/img/sparkler.jpg" alt="Hand holding a sparkler" /></a>
-        </div>
-        <div class="col-md-3">
-          <h5 class="project-description text-center">Project description</h5>
-          <p class="text-center">
-            (Fake project)<br />
-            Exploration into unlocking human creative potential.
-          </p>
-        </div>
+      <!--My Work Projects-->
+      <div class="col-md-3 site1p">
+        <h4>My Portfolio Website</h4>
+        <p>Languages used:<br />HTML<br />CSS</p>
+        <a href="index.html" target="_blank" class="button-live hvr-shutter-out-horizontal">Live</a>
+        <a href="https://github.com/Matija0408/First-project-take2" target="_blank"
+          class="button-github hvr-shutter-out-horizontal">Github</a>
       </div>
-      <div class="row site1">
-        <div class="col-md-3 offset-md-3">
-          <div>
-            <a href="http://omnifoodproject-com.stackstaging.com/" target="_blank"><img src="assets/img/hero.jpg"
-                alt="Food on a plate" /></a>
-          </div>
-        </div>
-        <div class="col-md-3 site1p">
-          <h4>Omnifood</h4>
-          <p>Languages used:<br />HTML<br />CSS</p>
-          <a href="http://omnifoodproject-com.stackstaging.com/" target="_blank"
-            class="button-live hvr-shutter-out-horizontal">Live</a>
-          <a href="https://github.com/Matija0408" target="_blank"
-            class="button-github hvr-shutter-out-horizontal">Github</a>
-        </div>
-        <div class="col-md-3">
-          <h5 class="project-description text-center">Project description</h5>
-          <p class="text-center">
-            (Fake project)<br />
-            Omnifood, your new premium food delivery service.
-          </p>
-        </div>
+      <div class="col-md-3">
+        <h5 class="text-center project-description">Project description</h5>
+        <p class="text-center">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque illo dolor ducimus, sint non rerum natus
+          ipsam sed fuga culpa.
+        </p>
       </div>
     </div>
-    <!--My Work Projects-->
   </section>
+  <section class="container-fluid">
+    <div class="row site1 creativity-bg">
+      <div class="col-md-3 offset-md-1">
+        <h5 class="project-description text-center">Project description</h5>
+        <p class="text-center">
+          (Fake project)<br />
+          Exploration into unlocking human creative potential.
+        </p>
+      </div>
+      <div class="col-md-3 text-right site1p mb-3">
+        <h4>Creativity</h4>
+        <p>Languages used:<br />HTML<br />CSS</p>
+        <a href="https://github.com/Matija0408" target="_blank"
+          class="button-github hvr-shutter-out-horizontal">Github</a>
+        <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"
+          class="button-live-reverse hvr-shutter-out-horizontal">Live</a>
+      </div>
+      <div class="col-md-3">
+        <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"><img
+            src="assets/img/sparkler.jpg" alt="Hand holding a sparkler" /></a>
+      </div>
+
+    </div>
+  </section>
+  <section class="container-fluid">
+    <div class="row site1">
+      <div class="col-md-3 offset-md-3">
+        <div>
+          <a href="http://omnifoodproject-com.stackstaging.com/" target="_blank"><img src="assets/img/hero.jpg"
+              alt="Food on a plate" /></a>
+        </div>
+      </div>
+      <div class="col-md-3 site1p">
+        <h4>Omnifood</h4>
+        <p>Languages used:<br />HTML<br />CSS</p>
+        <a href="http://omnifoodproject-com.stackstaging.com/" target="_blank"
+          class="button-live hvr-shutter-out-horizontal">Live</a>
+        <a href="https://github.com/Matija0408" target="_blank"
+          class="button-github hvr-shutter-out-horizontal">Github</a>
+      </div>
+      <div class="col-md-3">
+        <h5 class="project-description text-center">Project description</h5>
+        <p class="text-center">
+          (Fake project)<br />
+          Omnifood, your new premium food delivery service.
+        </p>
+      </div>
+    </div>
+  </section>
+  <!--My Work Projects-->
   <!--Footer-->
   <footer class="container-fluid footer-bg-color">
     <div class="row">
