--- a/about.html
+++ b/about.html
@@ -15,91 +15,92 @@
 
 <body>
   <main class="bg-about">
-    <div>
-      <!--nav boilerplate taken from Bootstrap doc-->
-      <div class="fixed-top">
-        <ul class="nav justify-content-center links">
-          <li class="nav-item">
-            <a class="nav-link border-h" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link border-d" href="assets/doc/FakeCV.pdf" target="_blank"><i class="fa fa-download"
-                aria-hidden="true"></i>&nbsp CV</a>
-          </li>
-        </ul>
-        <!--nav boilerplate taken from Bootstrap doc-->
-      </div>
-      <!--About Me-->
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 p-3">
-            <h3 class="text-center aboutme-mt">About Me</h3>
-            <p class="about-me-text text-center">
-              I am a student of Full Stack Web Developer course at Code
-              Institute in Dublin and at the age of 38 i discovered that i enjoy
-              creating stuff;- just anything i can imagine. And in my eyes,
-              coding is the perfect tool for that. First, i'm learning Web
-              Development, and my thoughts about that are as follows:<br /><br />
-
-              <span>Every website is created for a specific purpose. My goal is to
-                showcase that purpose with beauty, elegance and perfect
-                presentation of the sites goal.</span>
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-12 col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-            <p class="thought text-justify text-center">
-              “If opportunity doesn’t knock, build a door.”
-              – Milton Berle
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col text-center">
-            <div>
-              <i class="fas fa-arrow-down point-down"></i>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--About Me-->
-  </main>
-  <section>
     <div class="container-fluid">
-      <div class="row whatiuse-bg-color">
-        <div class="col-md-4 offset-md-4 text-center what-i-use">
-          <div>
-            <h3>What I use</h3>
-            <p>
-              <strong class="html">HTML</strong>/<strong class="css">CSS</strong>, <span
-                class="js">JavaScript</span><br /><i class="fab fa-python">&nbspPython</i>, <strong>Kotlin</strong>
-            </p>
+      <div class="row">
+        <div class="col">
+          <div class="fixed-top">
+            <ul class="nav justify-content-center links">
+              <li class="nav-item">
+                <a class="nav-link border-h" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link border-d" href="assets/doc/FakeCV.pdf" target="_blank"><i class="fa fa-download"
+                    aria-hidden="true"></i>&nbsp CV</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-      <div class="row my-work">
-        <div class="col text-center">
-          <h3>My Work</h3>
+    </div>
+    <!--### About Me ###-->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 p-3">
+          <h3 class="text-center aboutme-mt">About Me</h3>
+          <p class="about-me-text text-center">
+            I am a student of Full Stack Web Developer course at Code
+            Institute in Dublin and at the age of 38 i discovered that i enjoy
+            creating stuff;- just anything i can imagine. And in my eyes,
+            coding is the perfect tool for that. First, i'm learning Web
+            Development, and my thoughts about that are as follows:<br /><br />
+            <span>Every website is created for a specific purpose. My goal is to
+              showcase that purpose with beauty, elegance and perfect
+              presentation of the sites goal.</span>
+          </p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+          <p class="thought text-justify text-center about-quote">
+            “If opportunity doesn’t knock, build a door.”
+            – Milton Berle
+          </p>
+        </div>
+      </div>
+      <div class="row about-quote">
+        <div class="col text-center">
+          <div>
+            <i class="fas fa-arrow-down point-down"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--### About Me ###-->
+  </main>
+  <section class="container-fluid">
+    <div class="row whatiuse-bg-color">
+      <div class="col-md-4 offset-md-4 text-center what-i-use">
+        <div>
+          <h3>What I use</h3>
+          <p>
+            <strong class="html">HTML</strong>/<strong class="css">CSS</strong>, <span
+              class="js">JavaScript</span><br /><i class="fab fa-python">&nbspPython</i>, <strong>Kotlin</strong>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="row my-work">
+      <div class="col text-center">
+        <h3>My Work</h3>
+      </div>
+    </div>
   </section>
   <section class="container-fluid">
     <div class="row site1">
-      <div class="col-md-3 offset-md-3">
+      <div class="col-md-3 offset-md-2">
         <div>
           <a href="index.html" target="_blank"><img src="assets/img/my-portfolio-site.PNG"
               alt="My first portfolio site" /></a>
         </div>
       </div>
-      <!--My Work Projects-->
-      <div class="col-md-3 site1p">
+      <!--### My Work Projects ###-->
+      <div class="col-md-3 site1p mobile-text-center">
         <h4>My Portfolio Website</h4>
         <p>Languages used:<br />HTML<br />CSS</p>
         <a href="index.html" target="_blank" class="button-live hvr-shutter-out-horizontal">Live</a>
@@ -124,7 +125,7 @@
           Exploration into unlocking human creative potential.
         </p>
       </div>
-      <div class="col-md-3 text-right site1p mb-3">
+      <div class="col-md-3 site1p mb-3 mobile-text-center text-md-right">
         <h4>Creativity</h4>
         <p>Languages used:<br />HTML<br />CSS</p>
         <a href="https://github.com/Matija0408" target="_blank"
@@ -136,18 +137,17 @@
         <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"><img
             src="assets/img/sparkler.jpg" alt="Hand holding a sparkler" /></a>
       </div>
-
     </div>
   </section>
   <section class="container-fluid">
     <div class="row site1">
-      <div class="col-md-3 offset-md-3">
+      <div class="col-md-3 offset-md-2">
         <div>
           <a href="http://omnifoodproject-com.stackstaging.com/" target="_blank"><img src="assets/img/hero.jpg"
               alt="Food on a plate" /></a>
         </div>
       </div>
-      <div class="col-md-3 site1p">
+      <div class="col-md-3 site1p mobile-text-center">
         <h4>Omnifood</h4>
         <p>Languages used:<br />HTML<br />CSS</p>
         <a href="http://omnifoodproject-com.stackstaging.com/" target="_blank"
