--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <title>Matija's Web Developer Portfolio</title>
 </head>
 
-<body>
-  <header>
-    <div class="img-bg">
-      <div>
-        <!--nav boilerplate taken from Bootstrap doc-->
+<body class="img-bg">
+  <!--### Navigation ###-->
+  <nav class="container-fluid">
+    <div class="row">
+      <div class="col">
         <ul class="nav justify-content-center links">
           <li class="nav-item">
             <a class="nav-link border-h" href="index.html">Home</a>
@@ -32,22 +32,23 @@
             <a class="nav-link border-d" href="assets/doc/FakeCV.pdf" target="_blank"><i class="fa fa-download"
                 aria-hidden="true"></i>&nbsp CV</a>
           </li>
-          <!--nav boilerplate taken from Bootstrap doc-->
         </ul>
       </div>
-      <div class="container main-title-quote">
-        <div class="row d-flex justify-content-center">
-          <div class="col-md-6 text-center">
-            <h1>Matija Sekelj</h1>
-            <h2 class="main-title">Full Stack Web Developer</h2>
-            <p>
-              “The only thing worse than being blind is having sight but no
-              vision.” – Helen Keller
-            </p>
-          </div>
-        </div>
+    </div>
+  </nav>
+  <!--### Navigation ###-->
+  <div class="container main-title-quote">
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-6 text-center">
+        <h1>Matija Sekelj</h1>
+        <h2 class="main-title">Full Stack Web Developer</h2>
+        <p>
+          “The only thing worse than being blind is having sight but no
+          vision.” – Helen Keller
+        </p>
       </div>
     </div>
+  </div>
   </header>
   <!--Footer-->
   <footer class="container-fluid footer-bg-color fixed-bottom">
